--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -12,4 +12,4 @@ jobs:
         uses: lucasbento/auto-close-issues@v1.0.2
         with:
           github-token: ${{ secrets.token }}
-          issue-close-message: "@${issue.user.login}: hello! :wave:\n\nThis issue is being automatically closed."
+          issue-close-message: "test"
