--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -8,3 +8,4 @@ jobs:
       uses: roots/issue-closer@v1.1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
+        issue-close-message: "@${issue.user.login} this issue was automatically closed because it did not follow the issue template"
