--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,13 +1,15 @@
-name: Autocloser
-on: [issues, pull_request]
+on:
+  issues:
+    types: [opened, edited]
+
 jobs:
-  autoclose:
+  auto_close_issues:
     runs-on: ubuntu-latest
     steps:
-    - name: Autoclose issues that did not follow issue template
-      uses: roots/issue-closer@v1.1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-close-message: "@${issue.user.login} this issue was automatically closed because it did not follow the issue template"
-        issue-pattern: |
-          "(\s\S)?"
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Automatically close issues that don't follow the issue template
+        uses: lucasbento/auto-close-issues@v1.0.2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-close-message: "@${issue.user.login}: hello! :wave:\n\nThis issue is being automatically closed because it does not follow the issue template." # optional property
