--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,14 +1,14 @@
 on:
   issues:
     types: [opened, edited]
-
 jobs:
-  auto_close_issues:
+  titlePrefixCheck:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Automatically close issues that don't follow the issue template
-        uses: lucasbento/auto-close-issues@v1.0.2
+      - if: startsWith(github.event.issue.title, 'ABC-') != 'true'
+        name: Close Issue
+        uses: peter-evans/close-issue@v2
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          comment: |
+            Issue title must start with 'ABC-'.
+            Auto-closing this issue.
