--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -5,26 +5,53 @@ jobs:
   titlePrefixCheck:
     runs-on: ubuntu-latest
     steps:
-      # - if: startsWith(github.event.issue.title, 'ABC-') != 'true'
-        # name: Close Issue
-        # uses: peter-evans/close-issue@v2
-        # with:
-        #   comment: |
-        #     Issue title must start with 'ABC-'.
-        #     Auto-closing this issue.
+      - name: Check Issue title
+        run: |
+          if [[ "${{ github.event.issue.number }}" =~ ^Bug:* ]]; then
+              echo "ISSUE_TITLE_VALID=true" >> $GITHUB_ENV
+          else
+              echo "ISSUE_TITLE_VALID=false" >> $GITHUB_ENV
+          fi
+      - name: Check Issue body
+        run: |
+          if [[ "${{ github.event.issue.body }}" =~ ^## Summary$(.|\n)*## Environment$(.|\n)*## Steps to reproduce$(.|\n)*## Expected Result$(.|\n)*## Actual Result$(.|\n)*$ ]]; then
+              echo "ISSUE_BODY_VALID=true" >> $GITHUB_ENV
+          else
+              echo "ISSUE_BODY_VALID=false" >> $GITHUB_ENV
+          fi
 
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
+        if: env.ISSUE_BODY_VALID != true
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
-            This is a multi-line test comment
-            - With GitHub **Markdown** :sparkles:
-            - Created by [create-or-update-comment][1]
+            Пожалуйста, используйте шаблон для баг-репорта
 
-            [1]: https://github.com/peter-evans/create-or-update-comment
+            Заголовок: `Bug: заголовок`
+
+            ```markdown
+            ## Summary
+            краткое, емкое и понятное описание ошибки
+            ## Environment
+            ссылка на билд/коммит/версия ПО и всего окружения
+            ## Steps to reproduce
+            Полный перечень шагов для воспроизведения
+            ## Expected result
+            какой результат должен был быть без ошибки
+            ## Actual result:
+            какой результат получился на самом деле
+            ```
 
       # - uses: dessant/label-actions@v2
       #   with:
       #     github-token: ${{ github.token }}
       #     config-path: '.github/label-actions.yml'
+
+      # - if: startsWith(github.event.issue.title, 'ABC-') != 'true'
+      #   name: Close Issue
+      #   uses: peter-evans/close-issue@v2
+      #   with:
+      #     comment: |
+      #       Issue title must start with 'ABC-'.
+      #       Auto-closing this issue.
