--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
-        if: (env.ISSUE_BODY_VALID != 'true') || (env.ISSUE_TITLE_VALID != 'true')
+        if: ${{ env.ISSUE_BODY_VALID != 'true' || env.ISSUE_TITLE_VALID != 'true' }}
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
