--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Check Issue body
         run: |
           if [[ "${{ github.event.issue.body }}" =~ (^## Summary$(.|\n)*## Environment$(.|\n)*## Steps to reproduce$(.|\n)*## Expected Result$(.|\n)*## Actual Result$(.|\n)*$) ]]; then
-              echo "ISSUE_BODY_VALID=true"
+              echo "ISSUE_BODY_VALID=true" >> $GITHUB_ENV
           else
-              echo "ISSUE_BODY_VALID=false"
+              echo "ISSUE_BODY_VALID=false" >> $GITHUB_ENV
           fi
 
       - name: Create comment
