--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
-        if: ${{ env.ISSUE_BODY_VALID !=}}
+        if: ${{ env.ISSUE_BODY_VALID != 'true' }}
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
