--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -12,27 +12,21 @@ jobs:
           else
               echo "ISSUE_TITLE_VALID=false" >> $GITHUB_ENV
           fi
-      # - name: Check Issue body
-      #   run: |
-      #     if [[ "$TEXT" =~ "(^## Summary$(.|\n)*## Environment$(.|\n)*## Steps to reproduce$(.|\n)*## Expected result$(.|\n)*## Actual result$(.|\n)*$" ]]; then
-      #         echo "ISSUE_BODY_VALID=true"
-      #     else
-      #         echo "ISSUE_BODY_VALID=false"
-      #     fi
-
-      - uses: actions-ecosystem/action-regex-match@v2
-        id: regex-match
-        with:
-          text: ${{ github.event.comment.body }}
-          regex: '^## Summary$(.|\n)*## Environment$(.|\n)*## Steps to reproduce$(.|\n)*## Expected result$(.|\n)*## Actual result$(.|\n)*$'
+      - name: Check Issue body
+        run: |
+          if [[ ${{ github.event.issue.body }} =~ "(^## Summary$(.|\n)*## Environment$(.|\n)*## Steps to reproduce$(.|\n)*## Expected result$(.|\n)*## Actual result$(.|\n)*$" ]]; then
+              echo "ISSUE_BODY_VALID=true"
+          else
+              echo "ISSUE_BODY_VALID=false"
+          fi
 
       - name: debug
         run: |
-          echo "${{ steps.regex-match.outputs.match }}"
+          echo "${{ env.ISSUE_BODY_VALID }}"
 
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
-        if: ${{ steps.regex-match.outputs.match != '' }}
+        if: ${{ env.ISSUE_BODY_VALID != 'true' }}
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
