--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -14,7 +14,17 @@ jobs:
           fi
       - name: Check Issue body
         run: |
-          if [[ "${{ github.event.issue.body }}" =~ "(^## Summary(.|\n)*## Environment(.|\n)*## Steps to reproduce(.|\n)*## Expected result(.|\n)*## Actual result(.|\n)*)" ]]; then
+          re='^## Summary
+          (.*)
+          ## Environment
+          (.*)
+          ## Steps to reproduce
+          (.*)
+          ## Expected result
+          (.*)
+          ## Actual result
+          (.*)$'
+          if [[ "${{ github.event.issue.body }}" =~ $re ]]; then
               echo "ISSUE_BODY_VALID=true" >> $GITHUB_ENV
           else
               echo "ISSUE_BODY_VALID=false" >> $GITHUB_ENV
