--- a/.github/ISSUE_TEMPLATE/bugreport.yml
+++ b/.github/ISSUE_TEMPLATE/bugreport.yml
@@ -1,9 +1,9 @@
 name: "Bug Report"
 description: Create a new ticket for a bug.
-title: "[BUG] - <title>"
-labels: [
-  "bug"
-]
+title: "Bug — <title>"
+labels:
+  - bug
+
 body:
   - type: textarea
     id: summary
